--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <meta name="google-site-verification" content="NA_KsXx_dtwg3-fOvL-vQaeP8fXGwAyzFyUHty6c7oU" />
 
     <!-- For native phonegap debug
-    <script src="http://192.168.1.128:8080/target/target-script-min.js"></script> 
+    <script src="http://192.168.1.128:8080/target/target-script-min.js"></script>
     -->
 
     <link rel="shortcut icon" sizes="196x196" href="logo_196.png">
@@ -40,10 +40,11 @@
           });
         }
 
-       	
+
     </script>
-	
+
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+
 	   <!-- build:css({.tmp,app}) styles/main.css -->
      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
@@ -52,14 +53,12 @@
      <link rel="stylesheet" href="bower_components/owlcarousel/owl-carousel/owl.theme.css">
      <!-- endbuild -->
 
-    <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-47367836-1', 'auto');
-          ga('send', 'pageview');
-    </script>
+     <script src="bower_components/jquery/jquery.js"></script>
+     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+     <script src="bower_components/owlcarousel/owl-carousel.js"></script>
+     <script src="scripts/main.js"></script>
+     <script src="scripts/app.js"></script>
+
 </head>
 <body>
     <!--[if lt IE 10]>
@@ -70,12 +69,17 @@
     <div style="text-align:center;margin-top:25px;font-size:18px">
         <div><i class="icon-spinner icon-spin"></i> Loading...</div>
         <div><img src="logo_196.png" style="margin:20px 0;box-shadow:0 0 5px #bbb;border-radius:8px;border:1px solid #ccc" /></div>
-    	<div id="status" style="font-size:14px">Visualization package</div>
+        <div id="status" style="font-size:14px">Visualization package</div>
     </div>
 
-    <!-- build:js scripts/main.js -->
-    <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-    <!-- endbuild -->
+    <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-47367836-1', 'auto');
+          ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
