--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 
      <script src="bower_components/jquery/jquery.js"></script>
      <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-     <script src="bower_components/owlcarousel/owl-carousel.js"></script>
+     <script src="bower_components/owlcarousel/owl-carousel/owl.carousel.js"></script>
      <script src="scripts/main.js"></script>
      <script src="scripts/app.js"></script>
 
